--- a/README
+++ b/README
@@ -1,14 +1,16 @@
-===================================
  The 'MythCenter' theme for MythTV
 ===================================
 
 Changelog:
 ----------
+21 jul 2011: added baseverywideselector and made the recording schedule field wider for easier reading
 04 feb 2005: removed clashing 'MythCenter' text from background
 03 feb 2005: initial release
 
 About:
 ------
+
+I forked this theme to make some changes and fixes. The goal of the fork is to fix the theme, not to implement new features.
 
 This theme is originally based on G.A.N.T. by Oscar Carlsson and 
 is inspired by the well-known Media Center theme.
@@ -17,8 +19,6 @@ I found the MythTVMediaCenterOSD osd theme by Jason Gabriele to go best
 with this theme, but of course this is merely a matter of taste. 
 Maybe I will do an OSD theme in the future too.
 
-The most recent version can be downloaded here: 
-http://www.fotoniq.nl/files/MythCenter.tar.gz
 
 Licensing:
 ----------
@@ -28,5 +28,5 @@ The contents may be freely distributed and changed.
 Contact:
 --------
 
-Jeroen Brosens
-jeroen@fotoniq.nl
+Jason Lewis
+jason@NOdicksonSPAM.st
